# ttd_ai

./: .gitignore  API_使用说明.txt  README.md  requirements.txt  todos.db
.github/workflows/: ci.yml
ai_pair_programming/: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
ai_pair_programming/examples/: basic_usage.py
ai_pair_programming/src/: __init__.py  agent.py
ai_pair_programming/src/core/: __init__.py  embedding.py  knowledge.py  memory.py
ai_pair_programming/tests/: test_agent.py
backend/: .env.example  Procfile  requirements.txt
backend/src/: auth.py  database.py  main.py
backend/tests/: test_auth.py  test_todo.py
docs/: AI结对编程提示词指南.md  AI结对编程提示词指南.txt  Cursor大法好：和AI结对编程实践TDD.md  Cursor大法好：和AI结对编程实践TDD.txt  前端项目初始化.md  提示词总结.md  教程系列规划建议.md
docs/02-前端开发实践/: 01-导航和主页开发.md  02-表单组件开发.md  03-测试最佳实践.md
docs/03-DevOps实践/: 01-CI-CD配置指南.md  02-前后端整合部署.md  03-项目总结.md  04-项目进阶优化.md
frontend/: .env.production  package-lock.json  package.json  vitest.config.ts
frontend/src/: App.tsx
frontend/src/__tests__/: App.test.tsx
frontend/src/components/: Navbar.tsx
frontend/src/components/auth/: LoginForm.tsx  RegisterForm.tsx
frontend/src/components/layout/: Navbar.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: Home.tsx  Login.tsx  Register.tsx  TodoList.tsx
frontend/src/routes/: index.tsx
frontend/src/services/: api.ts
frontend/src/test/: setup.ts
frontend/src/types/: auth.ts  todo.ts
scripts/: ai_pair_programming_agent.py
src/: database.py  main.py  models.py
tests/: test_auth.py
(+4 files in other folders)
